--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 /node_modules
 /.pnp
 .pnp.js
-.db.json
+db.json
 
 # testing
 /coverage
@@ -18,7 +18,7 @@
 .env.development.local
 .env.test.local
 .env.production.local
-.db.json
+db.json
 
 npm-debug.log*
 yarn-debug.log*
