--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "daenamu",
   "version": "0.1.0",
   "private": true,
+  "engines":{
+      "node" : "16.x",
+      "yarn": "1.22.x"
+  },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.5",
     "@testing-library/jest-dom": "^5.16.5",
